fixed header & footer, and updaitng z-indexes

--- a/style.css
+++ b/style.css
@@ -1135,7 +1135,7 @@ i {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 50px; }
+    height: 49px; }
   .gnb-right .button-group {
     display: flex;
     align-items: center;
@@ -1157,6 +1157,8 @@ i {
     .gnb .logo:active {
       opacity: 0.4; }
   @media screen and (min-width: 768px) {
+    .gnb-wrapper {
+      height: 79px; }
     .gnb-left {
       display: flex;
       align-items: center;
@@ -1220,7 +1222,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 20;
+  z-index: 200;
   width: 240px;
   height: 100vh;
   padding: 32px 20px;
@@ -1299,7 +1301,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   width: 100%;
   height: 100vh;
   background-color: rgba(63, 65, 80, 0.5);
@@ -1314,7 +1316,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 30;
+  z-index: 300;
   width: 100%;
   height: 100vh;
   padding: 10px 0;
@@ -1382,6 +1384,26 @@ i {
         line-height: 24px;
         letter-spacing: -0.01em;
         height: 50px; } }
+
+.global-header {
+  width: 100%;
+  height: 90px; }
+  .global-header .gnb,
+  .global-header .lnb {
+    position: fixed;
+    left: 0;
+    width: 100%; }
+  .global-header .gnb {
+    top: 0;
+    z-index: 60; }
+  .global-header .lnb {
+    top: 50px;
+    z-index: 50; }
+  @media screen and (min-width: 768px) {
+    .global-header {
+      height: 130px; }
+      .global-header .lnb {
+        top: 80px; } }
 
 .global-footer {
   padding-top: 32px;
