--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,3 +1,6 @@
-$overlay-level: 10;
-$sidebar-level: 20;
-$search-modal-level: 30;
+$lnb-level: 50;
+$gnb-level: 60;
+
+$overlay-level: 100;
+$sidebar-level: 200;
+$search-modal-level: 300;
