--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -4,7 +4,7 @@
 
   &-wrapper {
     @include flexbox(between);
-    height: 50px;
+    height: $gnb-height-sm - 1px;
   }
 
   &-right {
@@ -38,6 +38,9 @@
 
   @include responsive(T) {
     // 768px
+    &-wrapper {
+      height: $gnb-height-md - 1px;
+    }
 
     &-left {
       @include flexbox(start);
